--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-template",
+  "name": "peer-swap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,9 @@
     "dev:https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bot": "tsx src/components/shared/api/bot.ts",
+    "dev:all": "concurrently \"pnpm dev\" \"pnpm convex dev\" \"pnpm bot\" --names \"NEXT,CONVEX,BOT\" --prefix-colors \"blue,green,yellow\""
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -17,6 +19,7 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.10",
@@ -25,9 +28,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.25.0",
+    "dotenv": "^16.4.5",
     "eruda": "^3.0.1",
     "lucide-react": "^0.523.0",
     "next": "15.3.1",
+    "node-telegram-bot-api": "^0.66.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.5.6",
     "react": "^18",
@@ -37,10 +42,13 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "tsx": "^4.7.0",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
