--- a/env.template
+++ b/env.template
@@ -6,4 +6,10 @@ NEXT_PUBLIC_APP_URL=https://your-deployed-app-url.vercel.app
 CONVEX_DEPLOYMENT=your_convex_deployment_url
 
 # Development
-NODE_ENV=development 
+NODE_ENV=development
+
+# YooKassa Configuration
+# Find your Agent ID in YooKassa Dashboard: Settings → Payout Settings (agentId field)
+NEXT_PUBLIC_YOOKASSA_ACCOUNT_ID=your_yookassa_agent_id_here
+YOOKASSA_SECRET_KEY=your_yookassa_secret_key_here
+YOOKASSA_SHOP_ID=your_yookassa_shop_id_here 
