--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:all": "concurrently \"pnpm dev\" \"pnpm convex dev\" \"pnpm bot\" --names \"NEXT,CONVEX,BOT\" --prefix-colors \"blue,green,yellow\""
   },
   "dependencies": {
+    "@a2seven/yoo-checkout": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-context-menu": "^2.2.15",
@@ -44,6 +45,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "@types/node-telegram-bot-api": "^0.64.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
