--- a/env.template
+++ b/env.template
@@ -1,6 +1,7 @@
 # Telegram Bot Configuration
 BOT_TOKEN=your_telegram_bot_token_here
 NEXT_PUBLIC_APP_URL=https://your-deployed-app-url.vercel.app
+TELEGRAM_WEBHOOK_SECRET=your_random_secret
 
 # Convex Configuration (if needed)
 CONVEX_DEPLOYMENT=your_convex_deployment_url
