--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "bot": "tsx src/components/shared/api/bot.ts",
-    "dev:all": "concurrently \"pnpm dev\" \"pnpm convex dev\" \"pnpm bot\" --names \"NEXT,CONVEX,BOT\" --prefix-colors \"blue,green,yellow\""
+    "dev:all": "concurrently \"pnpm dev\" \"pnpm convex dev\" --names \"NEXT,CONVEX\" --prefix-colors \"blue,green\""
   },
   "dependencies": {
     "@a2seven/yoo-checkout": "^1.1.4",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-context-menu": "^2.2.15",
@@ -38,7 +38,6 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.523.0",
     "next": "15.3.1",
-    "node-telegram-bot-api": "^0.66.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.5.6",
     "react": "^18",
@@ -51,7 +50,6 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/node-telegram-bot-api": "^0.64.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
