upd check for admin

--- a/env.template
+++ b/env.template
@@ -14,3 +14,8 @@ NODE_ENV=development
 NEXT_PUBLIC_YOOKASSA_ACCOUNT_ID=your_yookassa_agent_id_here
 YOOKASSA_SECRET_KEY=your_yookassa_secret_key_here
 YOOKASSA_SHOP_ID=your_yookassa_shop_id_here 
+NEXT_PUBLIC_YANDEX_MAPS_API_KEY=your_yandex_maps_api_key_here
+CDEK_CLIENT_ID=your_cdek_client_id_here
+CDEK_CLIENT_SECRET=your_cdek_client_secret_here
+NEXT_PUBLIC_CDEK_SERVICE_PATH=/api/cdek/service
+NEXT_PUBLIC_CDEK_FROM=Москва
